--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+buildscript {
+    ext {
+
+        project_minSdk = 21
+        project_targetSdk = 35
+        project_compileSdk = 35
+    }
+    // Diğer buildscript ayarları
 }
+
+plugins {
+    id 'com.android.application' version '8.7.0' apply false
+    id 'com.android.library' version '8.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false
+}
+
